# regression

./: .gitignore  1  CMakeLists.txt  CMakeLists.txt.old  build.sh
dataset/: housePrice.csv
examples/: CMakeList.txt  CMakeLists.txt  cnn_example.cpp  example_linear.cpp  example_logistic.cpp  example_python.cpp  neural_network_example.py
include/: Estimator.h  linear_regression.h  logistic_regression.h
include/activation/: activation.h
include/components/layers/: convolutional.h  dense.h  layer.h  recurrent.h
include/components/optimizers/: adam.h
include/exceptions/: dimension_exception.h  exception_macros.h  fitting_exception.h  io_exception.h  ml_exception.h  validation_exception.h
include/layers/: convolutional.h  dense.h  pooling.h  recurrent.h
include/models/: estimator.h  linear_regression.h  logistic_regression.h  neural_network.h
include/neural_network/: neural_network.h
include/optimizers/: optimizer.h  sgd.h
include/regression/: estimator.h  linear_regression.h  logistic_regression.h  math_utils.h  math_utils.h.old
include/serialization/: serializable.h
include/utils/: math_utils.h  serializable.h
pybinding/: CMakeLists.txt  machine_learning_module.cpp  regression_module.cpp  test_python_bindings.py.in
pybinding/src/: bindRegression.cpp
scripts/: housePriceCostFunction.py  housePriceGradientDescent.py  housePricePrediction.py  linearRegression.py  linear_regression.py  logistic_regression_demo.py  multi_var_regression.py  pricePrediction.py
src/: CMakeLists.txt  linear_regression.cpp  logistic_regression.cpp
src/activation/: activation.cpp
src/components/activation/: activation.cpp
src/components/layers/: convolutional.cpp  dense.cpp  pooling.cpp  recurrent.cpp
src/components/optimizers/: adam.cpp  sgd.cpp
src/layers/: convolutional.cpp  dense.cpp  pooling.cpp  recurrent.cpp
src/models/: linear_regression.cpp  logistic_regression.cpp  neural_network.cpp
src/neural_network/: neural_network.cpp
src/optimizers/: adam.cpp  sgd.cpp
tests/: CMakeLists.txt  test_import.py  test_linear.cpp  test_linear_regression.py  test_logic.py  test_logistic.cpp  test_ml_module.py  test_neural.cpp  test_python_import.py  test_regression.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/unit/: test_linear.cpp  test_logistic.cpp  test_neural.cpp  test_regression.cpp
tests/python/unit/: test_import.py  test_layers.py  test_logic.py  test_ml_module.py  test_python_import.py
utils/: __init__.py
utils/helpers/: __init__.py  import_lib.py  lab_utils_uni.py  plot_utils.py
utils/models/: __init__.py  computeGradient.py  computeLinearRegresssion.py
